Search: adjust sidebar sphere search height, fix scrollbar for user search

--- a/web-app/style/main.scss
+++ b/web-app/style/main.scss
@@ -3423,6 +3423,10 @@ html {
   height: 100vh;
 }
 
+.max-h-0 {
+  max-height: 0px;
+}
+
 .max-h-12 {
   max-height: 3rem;
 }
@@ -3443,12 +3447,12 @@ html {
   max-height: 100%;
 }
 
-.max-h-128 {
-  max-height: 32rem;
+.max-h-124 {
+  max-height: 31rem;
 }
 
-.max-h-0 {
-  max-height: 0px;
+.min-h-0 {
+  min-height: 0px;
 }
 
 .min-h-24 {
@@ -3457,10 +3461,6 @@ html {
 
 .min-h-full {
   min-height: 100%;
-}
-
-.min-h-0 {
-  min-height: 0px;
 }
 
 .w-0 {
